Fixed Spacing

--- a/hw1/css/styles.css
+++ b/hw1/css/styles.css
@@ -40,7 +40,7 @@ nav a:hover {
 .subsubheaders {
     color:white;
     text-align: left;
-    margin: 200px auto;
+    margin: 0px 200px;
 }
 
 .outer {
@@ -51,7 +51,7 @@ nav a:hover {
 .paragraph {
     color:white;
     text-align: left;
-    margin: 200px auto;
+    margin: 0px 200px;
 }
 
 #Disclaimer {
